<resources>
    <string name="app_name">Rashtemi Restaurant</string>
    <string name="menu_button_txt">View Menu</string>
    <string name="contact_button_txt">Contact</string>
    <string name="order_button_txt">Order</string>
    <string name="book_button_txt">Book a table</string>
    <string name="myacc_button_text">My Account</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">SIGN UP</string>
    <string name="donthave_text">Don\'t have an account?</string>
    <string name="username_text">Username:</string>
    <string name="username1_text">Username</string>
    <string name="password_text">Password:</string>
    <string name="password1_text">Password</string>
    <string name="usernameNou_text">Username:</string>
    <string name="loginTitle_text">LOGIN PAGE</string>
    <string name="signupTitle_text">SIGN UP PAGE</string>
    <string name="confirmPassword_text">Confirm:</string>
    <string name="signup_button2_text">Create New Account</string>
    <string name="name_text">Name:</string>
    <string name="name1_text">Name</string>
    <string name="telephone_text">Phone:</string>
    <string name="telephone1_text">Phone</string>
    <string name="Name_book_text">Name:</string>
    <string name="Book_a_table_text">Book A Table</string>
    <string name="name_book_et">Name</string>
    <string name="book_phone_text">Phone:</string>
    <string name="book_phone_et">07********</string>
    <string name="Number_book_text">No. of guests</string>
    <string name="pick_date">Pick Date</string>
    <string name="picked_date_text">Pick Date</string>
    <string name="Pick_time_text">Pick time</string>
    <string name="cart_product_name_text">Pizza</string>
    <string name="addBooking_button">BOOK</string>
    <string name="download_menu_text">Download menu</string>
    <string name="place_order">Place order</string>

    <string-array name="number_of_guests">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="hour_schedule">
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
    </string-array>
</resources>
