<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alex.rashtemirestaurant.MainActivity"

    android:orientation="vertical">

        <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/burger"
        android:paddingBottom="50dp"
        android:paddingTop="25dp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_button_txt"
        android:id="@+id/menu_button"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_button_txt"
        android:id="@+id/book_button"/>

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/contact_button_txt"
    android:id="@+id/contact_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myacc_button_text"
        android:id="@+id/myacc_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_menu_text"
        android:id="@+id/download_menu_button"/>

</LinearLayout>
