<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alex.rashtemirestaurant.BookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:paddingLeft="65dp"
            android:text="@string/Book_a_table_text"
            android:textSize="35dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/Name_book_text"
                android:textSize="25dp" />

            <EditText
                android:id="@id/name_book_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name_book_et"
                android:textSize="25dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/book_phone_text"
                android:textSize="25dp" />

            <EditText
                android:id="@id/phone_book_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/book_phone_et"
                android:textSize="25dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/Number_book_text"
                android:textSize="25dp" />

            <Spinner
                android:id="@id/guests_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/book_phone_et"
                android:textSize="25dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_date"
                android:onClick="showDatePickerDialog"
                android:textSize="25dp"
                android:layout_marginLeft="-7dp"
                android:textAllCaps="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pick_date_id"
                android:hint="@string/picked_date_text"
                android:textSize="25dp"
                android:paddingLeft="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/Pick_time_text"
                android:textSize="25dp" />

            <Spinner
                android:id="@id/hour_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/book_phone_et"
                android:textSize="25dp" />

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addBooking_button"
            android:text="@string/addBooking_button"
            android:textSize="25dp"
            />


    </LinearLayout>
</ScrollView>
